istio-manifests/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
     name: book-info-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - book-info-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
       - destination:
          host: book-info
          port:
           number: 80
#http://docitu.com:8080
#20.3.15.71:8080
#20.3.13.230:8888
